--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "4.2.2",
+    "react-syntax-highlighter": "^7.0.4",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.20.2",
     "url-loader": "^0.6.2",
